--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,4 @@ dmypy.json
 # End of https://www.gitignore.io/api/code
 .ipynb_checkpoints
 data/datos_privados_Cuba.ods
+data/datos_privados_Cuba.csv
