--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit==0.57.2
-numpy==1.18.2
-pandas==1.0.3
-altair==4.0.1
 graphviz==0.13.2
+pandas==1.0.3
+numpy==1.18.2
+scipy==1.4.1
+altair==4.0.1
+streamlit==0.60.0
 PyYAML==5.3.1
-scikit_learn==0.22.2.post1
+scikit_learn==0.23.1
