--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
       - 8501:8501
     volumes:
       - ./:/src
-    command: ["streamlit", "run", "simulation.py"]
+    command: ["streamlit", "run", "dashboard.py"]
