--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-graphviz==0.13.2
-pandas==1.0.3
-numpy==1.18.2
-scipy==1.4.1
 altair==4.0.1
-streamlit==0.60.0
+graphviz==0.13.2
+networkx==2.4
+numpy==1.18.2
+pandas==1.0.3
+pydot==1.4.1
 PyYAML==5.3.1
 scikit_learn==0.23.1
+scipy==1.4.1
+streamlit==0.60.0
